C2: Assert failed in PhaseCFG::verify() after JDK-8183390

XMLWordPrintable

    • b24
    • b32

        # Internal Error (\workspace\open\src\hotspot\share\opto\block.cpp:1251), pid=34716, tid=13156
        # assert(n->is_Root() || n->is_Region() || n->is_Phi() || n->is_MachMerge() || def_block->dominates(block)) failed: uses must be dominated by definitions

          1. FuzzerUtils.java
            13 kB
          2. hs_err_pid2130903.log
            71 kB
          3. hs_err_pid34716.log
            80 kB
          4. replay_pid2130903.log
            133 kB
          5. replay_pid34716.log
            127 kB
          6. Test.java
            8 kB

              Assignee:
              Pengfei Li
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: