8289954: C2: Assert failed in PhaseCFG::verify() after JDK-8183390

Reviewed-by: kvn, thartmann, roland